Removed last initial from name on index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       
     <h1>About Me</h1>
     <p>
-    <img src="assets/images/Profile Image.jpg">Hi, I'm Sarah B! I'm an aspiring web developer and have 8+ years of digital marketing experience under my belt. I was born and raised in Salt Lake City, but relocated to Seattle in 2015 with my husband and two pups, just for kicks and a change of scenery. When not at work, I enjoy kicking back with a video game (action-adventure RPGs are my thing), but also love exploring or checking out new breweries/restaurants.  I also drink entirely too much coffee.     
+    <img src="assets/images/Profile Image.jpg">Hi, I'm Sarah! I'm an aspiring web developer and have 8+ years of digital marketing experience under my belt. I was born and raised in Salt Lake City, but relocated to Seattle in 2015 with my husband and two pups, just for kicks and a change of scenery. When not at work, I enjoy kicking back with a video game (action-adventure RPGs are my thing), but also love exploring or checking out new breweries/restaurants.  I also drink entirely too much coffee.     
     </p>
 
 
