--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>About Me</title>
 
+    <!-- Link to CSS here-->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
 
 </head>
 
