Linked contact, index, and portfolio html

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <h1>Sarah Beecroft</h1>
 
     <div class="topnav">
-        <a href="portfolio.html">Home</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
     </div>
 
     <div>
-    <h1>About Me</h1>
+    <h2>About Me</h2>
     <p>
         <img src="assets/images/ProfileImage.jpg"><br>Hi, I'm Sarah! I'm an aspiring web developer with 8+ years of
         digital marketing experience under my belt. I was born and raised in Salt Lake City, but relocated to Seattle in
