--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>My Portfolio</title>
 
-    	
-      
+<head>
+    <meta charset="UTF-8">
+    <title>About Me</title>
+
+    <!-- Link to CSS here-->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+
 </head>
+
 <body>
+
+    <h1>Sarah Beecroft</h1>
 
     <div class="topnav">
         <a href="index.html">About</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-      </div>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+    </div>
 
+    <div>
+    <h2>About Me</h2>
+    <p>
+        Portfolio
+    </p>
+
+    <h2>Contact Info</h2>
+    <ul>
+        <li><strong>Email: </strong><a href="mailto:smblair87@gmail.com"target="_blank">smblair87@gmail.com</a></li>
+        <li><strong>GitHub:</strong> <a href="https://github.com/SarahMBeecroft"target="_blank">SarahMBeecroft</a></li>
+        <li><strong>Portfolio:</strong> Coming Soon!</li>
+    </ul>
+    </div>
 
 </body>
+
 </html>
 
