Updated titles and font on css, contact, index, and portfolio

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>About Me</title>
+    <title>Contact</title>
 
     <!-- Link to CSS here-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
@@ -12,9 +12,8 @@
 
 <body>
 
-    <h1>Sarah Beecroft</h1>
-
     <div class="topnav">
+        <h1>Sarah Beecroft</h1>
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
