Added background image, centered page, created width of 960px

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,25 +12,30 @@
 
 <body>
 
+    <div>
+    <h1>Sarah Beecroft</h1>
+    </div>
+    
     <div class="topnav">
-        <h1>Sarah Beecroft</h1>
-        <a href="index.html">About</a>
+        <ul>
+        <li style="float:right"><a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
+        </ul>
     </div>
 
     <div>
-    <h2>About Me</h2>
+    <h2>Portfolio</h2>
     <p>
-        Portfolio
+        Portfolio filler
     </p>
 
-    <h2>Contact Info</h2>
-    <ul>
-        <li><strong>Email: </strong><a href="mailto:smblair87@gmail.com"target="_blank">smblair87@gmail.com</a></li>
-        <li><strong>GitHub:</strong> <a href="https://github.com/SarahMBeecroft"target="_blank">SarahMBeecroft</a></li>
-        <li><strong>Portfolio:</strong> Coming Soon!</li>
-    </ul>
+    </div>
+
+    <div class="footer">
+        <footer>
+            <p>Copyright ©</p>
+        </footer>    
     </div>
 
 </body>
