--- a/index.html
+++ b/index.html
@@ -11,30 +11,46 @@
 </head>
 
 <body>
-
+    <div>
+    <h1>Sarah Beecroft</h1>
+    </div>
+    
     <div class="topnav">
-        <h1>Sarah Beecroft</h1>
-        <a href="index.html">About</a>
+        <ul>
+        <li style="float:right"><a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
+        </ul>
     </div>
 
     <div>
     <h2>About Me</h2>
+    <hr style="border: 1px solid grey;" />
     <p>
-        <img src="assets/images/ProfileImage.jpg"><br>Hi, I'm Sarah! I'm an aspiring web developer with 8+ years of
+        <img src="assets/images/ProfileImage.jpg" align="left">Hi, I'm Sarah! I'm an aspiring web developer with 8+ years of
         digital marketing experience under my belt. I was born and raised in Salt Lake City, but relocated to Seattle in
         2015 with my husband and two pups, just for kicks and a change of scenery. When not at work, I enjoy kicking
         back with a video game (action-adventure RPGs are my thing), but also love exploring or checking out new
         breweries/restaurants.
-    </p>
-
+    </p><br>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div>
     <h2>Contact Info</h2>
     <ul>
         <li><strong>Email: </strong><a href="mailto:smblair87@gmail.com"target="_blank">smblair87@gmail.com</a></li>
         <li><strong>GitHub:</strong> <a href="https://github.com/SarahMBeecroft"target="_blank">SarahMBeecroft</a></li>
         <li><strong>Portfolio:</strong> Coming Soon!</li>
     </ul>
+    </div>
+
+    <div class="footer">
+        <footer>
+            <p>Copyright ©</p>
+        </footer>    
     </div>
 
 </body>
