Updated font style

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
     <div class="topnav">
         <ul>
+        <h1 style="float:left">Sarah Beecroft</h1>
         <li style="float:right"><a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
@@ -25,7 +26,7 @@
 
     <div>
     <h2>About Me</h2>
-    <hr style="border: 1px solid grey;" />
+    <hr style="border: 1.5px solid #cccccc"/>
     <p>
         <img src="assets/images/ProfileImage.jpg" align="left">Hi, I'm Sarah! I'm an aspiring web developer with 8+ years of
         digital marketing experience under my belt. I was born and raised in Salt Lake City, but relocated to Seattle in
