Changed website background, updated formatting, and added contact form

--- a/contact.html
+++ b/contact.html
@@ -11,27 +11,40 @@
 </head>
 
 <body>
-
-    <div>
-    <h1>Sarah Beecroft</h1>
-    </div>
     
+    <!-- Top Nav Bar HTML -->
     <div class="topnav">
         <ul>
-        <li style="float:right"><a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <li style="float:left"><h1>Sarah Beecroft</h1></li>
+        <li style="float:right"><a href="contact.html">Contact</a></li>
+        <li style="float:right"><a href="portfolio.html">Portfolio</a></li>
+        <li style="float:right"><a href="index.html">About</a></li>
         </ul>
     </div>
 
-    <div>
-    <h2>Contact</h2>
-    <p>
-        Contact filler
-    </p>
+    <!-- Contact Form HTML -->
+    <div class="contactform">
+    <h2>Contact Me</h2>
+    <hr style="border: 1.5px solid #cccccc"/>
+        <form action="add link later">
 
+            <label for="name">Name</label>
+            <input type="text" id="name" name="full name" placeholder="John Smith">
+
+            <label for="lname">Email</label>
+            <input type="text" id="email" name="email" placeholder="example@gmail.com">
+
+            <label for="message">Message</label>
+            <textarea id="message" name="message" placeholder="Write your message here" style="height:200px"></textarea>
+
+            <input type="submit" value="Submit">
+
+        </form>
     </div>
+    
 
+
+    <!-- Footer HTML -->
     <div class="footer">
         <footer>
             <p>Copyright ©</p>
