--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>About Sarah</title>
+    <title>About Me</title>
 
     <!-- Link to CSS here-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
@@ -11,43 +11,42 @@
 </head>
 
 <body>
-    <div>
-    <h1>Sarah Beecroft</h1>
-    </div>
     
+    <!-- Top Nav Bar HTML -->
     <div class="topnav">
         <ul>
-        <h1 style="float:left">Sarah Beecroft</h1>
-        <li style="float:right"><a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <li style="float:left"><h1>Sarah Beecroft</h1></li>
+        <li style="float:right"><a href="contact.html">Contact</a></li>
+        <li style="float:right"><a href="portfolio.html">Portfolio</a></li>
+        <li style="float:right"><a href="index.html">About</a></li>
         </ul>
     </div>
 
-    <div>
+    <!-- About Me HTML -->
+    <div class="about">
     <h2>About Me</h2>
     <hr style="border: 1.5px solid #cccccc"/>
     <p>
-        <img src="assets/images/ProfileImage.jpg" align="left">Hi, I'm Sarah! I'm an aspiring web developer with 8+ years of
+        <img style="vertical-align:middle" src="assets/images/ProfileImage.jpg" alt="Photo of Sarah Beecroft">
+        Hi, I'm Sarah! I'm an aspiring web developer with 8+ years of
         digital marketing experience under my belt. I was born and raised in Salt Lake City, but relocated to Seattle in
         2015 with my husband and two pups, just for kicks and a change of scenery. When not at work, I enjoy kicking
         back with a video game (action-adventure RPGs are my thing), but also love exploring or checking out new
         breweries/restaurants.
     </p><br>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div>
+    
+    <!-- Contact Info HTML-->
+    <div class="contact">
     <h2>Contact Info</h2>
     <ul>
-        <li><strong>Email: </strong><a href="mailto:smblair87@gmail.com"target="_blank">smblair87@gmail.com</a></li>
-        <li><strong>GitHub:</strong> <a href="https://github.com/SarahMBeecroft"target="_blank">SarahMBeecroft</a></li>
+        <li><strong>Email: </strong><a href="mailto:smblair87@gmail.com" target="_blank">smblair87@gmail.com</a></li>
+        <li><strong>GitHub:</strong> <a href="https://github.com/SarahMBeecroft" target="_blank">SarahMBeecroft</a></li>
         <li><strong>Portfolio:</strong> Coming Soon!</li>
     </ul>
     </div>
-
+ 
+    <!-- Footer HTML -->
     <div class="footer">
         <footer>
             <p>Copyright ©</p>
