--- a/portfolio.html
+++ b/portfolio.html
@@ -11,27 +11,28 @@
 </head>
 
 <body>
-
-    <div>
-    <h1>Sarah Beecroft</h1>
-    </div>
     
+    <!-- Top Nav Bar HTML -->
     <div class="topnav">
         <ul>
-        <li style="float:right"><a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <li style="float:left"><h1>Sarah Beecroft</h1></li>
+        <li style="float:right"><a href="contact.html">Contact</a></li>
+        <li style="float:right"><a href="portfolio.html">Portfolio</a></li>
+        <li style="float:right"><a href="index.html">About</a></li>
         </ul>
     </div>
 
-    <div>
+    <!-- Portfolio HTML -->
+    <div class="portfolio">
     <h2>Portfolio</h2>
+    <hr style="border: 1.5px solid #cccccc"/>
     <p>
-        Portfolio filler
-    </p>
-
+        Fill in later.
+    </p><br>
     </div>
+    
 
+    <!-- Footer HTML -->
     <div class="footer">
         <footer>
             <p>Copyright ©</p>
@@ -41,4 +42,3 @@
 </body>
 
 </html>
-
