Updated font, border, and background colors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 </head>
 
 <body>
-    
+
+    <!-- Header -->
+    <div class ="header">
+
+    </div>
+
+
     <!-- Top Nav Bar HTML -->
     <div class="topnav">
         <ul>
@@ -49,7 +55,7 @@
     <!-- Footer HTML -->
     <div class="footer">
         <footer>
-            <p>Copyright ©</p>
+            <p id="copyright">Copyright ©</p>
         </footer>    
     </div>
 
