--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
     <!-- Footer HTML -->
     <div class="footer">
         <footer>
-            <p>Copyright ©</p>
+            <p id="copyright">Copyright ©</p>
         </footer>    
     </div>
 
