--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     <!-- Footer HTML -->
     <div class="footer">
         <footer>
-            <p>Copyright ©</p>
+            <p id ="copyright">Copyright ©</p>
         </footer>    
     </div>
 
