--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>About Me</title>
 
     <!-- Link to CSS here-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
 </head>
 
 <body>
 
     <!-- Header -->
-    <div class ="header">
+    <div class="header">
 
     </div>
 
@@ -21,32 +21,40 @@
     <!-- Top Nav Bar HTML -->
     <div class="topnav">
         <ul>
-        <li style="float:left"><h1>Sarah Beecroft</h1></li>
-        <li style="float:right"><a href="contact.html">Contact</a></li>
-        <li style="float:right"><a href="portfolio.html">Portfolio</a></li>
-        <li style="float:right"><a href="index.html">About</a></li>
+            <li style="float:left">
+                <h1>Sarah Beecroft</h1>
+            </li>
+            <li style="float:right"><a href="contact.html">Contact</a></li>
+            <li style="float:right"><a href="portfolio.html">Portfolio</a></li>
+            <li style="float:right"><a href="index.html">About</a></li>
         </ul>
     </div>
 
     <!-- About Me HTML -->
     <div class="about">
-    <h2>About Me</h2>
-    <hr style="border: 1.5px solid #cccccc"/>
-    <p>
-        <img style="vertical-align:middle" src="assets/images/ProfileImage.jpg" alt="Photo of Sarah Beecroft">
-        Hi, I'm Sarah! I'm an aspiring web developer with 8+ years of
-        digital marketing experience under my belt. I was born and raised in Salt Lake City, but relocated to Seattle in
-        2015 with my husband and two pups, just for kicks and a change of scenery. When not at work, I enjoy kicking
-        back with a video game (action-adventure RPGs are my thing), but also love exploring or checking out new
-        breweries/restaurants.
-    </p><br>
+        <h2>About Me</h2>
+        <hr style="border: 1.5px solid #cccccc" />
+        <img src="assets/images/ProfileImage.jpg" alt="Photo of Sarah Beecroft" />
+        <p class="bio">
+
+
+            Hi, I'm Sarah! I'm an aspiring web developer with 8+ years of digital marketing experience under my belt. I
+            was born and raised in Salt Lake City, but relocated to Seattle in
+            2015 with my husband and two pups, just for kicks and a change of scenery. I'm creative and thrive in
+            environments that allow for growth and constant learning.
+            <br>
+            <br>
+            When not at work, I enjoy kicking back with a video game (action-adventure RPGs are my thing), but also love
+            exploring or checking out new breweries/restaurants.
+
+        </p><br>
     </div>
- 
+
     <!-- Footer HTML -->
     <div class="footer">
         <footer>
             <p id="copyright">Copyright ©</p>
-        </footer>    
+        </footer>
     </div>
 
 </body>
