Added color block behind h1, changed background color on topnav to white, updated formatting on footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="topnav">
         <ul>
             <li style="float:left">
-                <h1>Sarah Beecroft</h1>
+                <h1><span>Sarah Beecroft</span></h1>
             </li>
             <li style="float:right"><a href="contact.html">Contact</a></li>
             <li style="float:right"><a href="portfolio.html">Portfolio</a></li>
