Updated bio text.

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
         <p class="bio">
 
 
-            Hi, I'm Sarah! I'm an aspiring web developer with 8+ years of digital marketing experience under my belt. I
-            was born and raised in Salt Lake City, but relocated to Seattle in
-            2015 with my husband and two pups, just for kicks and a change of scenery. I'm creative and thrive in
-            environments that allow for growth and constant learning.
+            Hi, I'm Sarah! I was born and raised in Salt Lake City, but relocated to Seattle in
+            2015 with my husband and two pups for a change of scenery. I'm an aspiring web developer with 8+ years of
+            digital marketing experience under my belt, including content writing, email marketing, and social media.
+            I'm creative and thrive in environments that allow for growth
+            and constant learning.
             <br>
             <br>
             When not at work, I enjoy kicking back with a video game (action-adventure RPGs are my thing), but also love
