--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             2015 with my husband and two pups for a change of scenery. I'm an aspiring web developer with 8+ years of
             digital marketing experience under my belt, including content writing, email marketing, and social media.
             I'm creative and thrive in environments that allow for growth
-            and constant learning.
+            and constant learning. TEST.
             <br>
             <br>
             When not at work, I enjoy kicking back with a video game (action-adventure RPGs are my thing), but also love
