Adjusted formatting on index.html

--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
 
 <body>
 
-    <!-- Header -->
-    <div class="header">
+    <!-- Header and Top Nav Bar HTML -->
+    <header>
 
-    </div>
-
-
-    <!-- Top Nav Bar HTML -->
-    <div class="topnav">
-        <ul>
-            <li style="float:left">
-                <h1><span>Sarah Beecroft</span></h1>
-            </li>
-            <li style="float:right"><a href="contact.html">Contact</a></li>
-            <li style="float:right"><a href="portfolio.html">Portfolio</a></li>
-            <li style="float:right"><a href="index.html">About</a></li>
-        </ul>
-    </div>
+    <div class ="header">
+        <div class="topnav">
+            <h1>Sarah Beecroft</h1>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
     <!-- About Me HTML -->
     <div class="about">
@@ -42,7 +39,7 @@
             2015 with my husband and two pups for a change of scenery. I'm an aspiring web developer with 8+ years of
             digital marketing experience under my belt, including content writing, email marketing, and social media.
             I'm creative and thrive in environments that allow for growth
-            and constant learning. TEST.
+            and constant learning. 
             <br>
             <br>
             When not at work, I enjoy kicking back with a video game (action-adventure RPGs are my thing), but also love
