--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
 
     <!-- Header and Top Nav Bar HTML -->
     <header>
-
-    <div class ="header">
-        <div class="topnav">
+        <div class ="topnav">
             <h1>Sarah Beecroft</h1>
-                <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </div>
+                <div class="nav">
+                    <ul>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>    
     </header>
 
     <!-- About Me HTML -->
