Adjusted formatting and added clearfix to header

--- a/index.html
+++ b/index.html
@@ -12,19 +12,27 @@
 
 <body>
 
-    <!-- Header and Top Nav Bar HTML -->
+    <!-- Header includes h1 and nav bar-->
     <header>
-        <div class ="topnav">
-            <h1>Sarah Beecroft</h1>
-                <div class="nav">
-                    <ul>
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div>    
+        <div class="clearfix">
+        
+        <div class="name">
+        <h1>Sarah Beecroft</h1>
+        </div>
+
+        <div class="nav">
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        </div>
+
     </header>
+
 
     <!-- About Me HTML -->
     <div class="about">
@@ -35,13 +43,16 @@
 
 
             Hi, I'm Sarah! I was born and raised in Salt Lake City, but relocated to Seattle in
-            2015 with my husband and two pups for a change of scenery. I'm an aspiring web developer with 8+ years of
-            digital marketing experience under my belt, including content writing, email marketing, and social media.
+            2015 with my husband and two pups for a change of scenery. I'm an aspiring web developer with 8+ years
+            of
+            digital marketing experience under my belt, including content writing, email marketing, and social
+            media.
             I'm creative and thrive in environments that allow for growth
-            and constant learning. 
+            and constant learning.
             <br>
             <br>
-            When not at work, I enjoy kicking back with a video game (action-adventure RPGs are my thing), but also love
+            When not at work, I enjoy kicking back with a video game (action-adventure RPGs are my thing), but also
+            love
             exploring or checking out new breweries/restaurants.
 
         </p><br>
@@ -53,7 +64,7 @@
             <p id="copyright">Copyright ©</p>
         </footer>
     </div>
-
+    </div>
 </body>
 
 </html>
