Adjusted formatting on about, portfolio, and contact

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,37 +6,48 @@
     <title>Portfolio</title>
 
     <!-- Link to CSS here-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
 </head>
 
 <body>
-    
-    <!-- Top Nav Bar HTML -->
-    <div class="topnav">
-        <ul>
-        <li style="float:left"><h1>Sarah Beecroft</h1></li>
-        <li style="float:right"><a href="contact.html">Contact</a></li>
-        <li style="float:right"><a href="portfolio.html">Portfolio</a></li>
-        <li style="float:right"><a href="index.html">About</a></li>
-        </ul>
-    </div>
+
+    <!-- Header includes h1 and nav bar-->
+    <header>
+        <div class="clearfix">
+
+            <div class="name">
+                <h1>Sarah Beecroft</h1>
+            </div>
+
+            <div class="nav">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+    </header>
 
     <!-- Portfolio HTML -->
     <div class="portfolio">
-    <h2>Portfolio</h2>
-    <hr style="border: 1.5px solid #cccccc"/>
-    <p>
-        Fill in later.
-    </p><br>
+        <h2>Portfolio</h2>
+        <hr style="border: 1.5px solid #cccccc" />
+        <p>
+            Fill in later.
+        </p><br>
     </div>
-    
+
 
     <!-- Footer HTML -->
     <div class="footer">
         <footer>
             <p id="copyright">Copyright ©</p>
-        </footer>    
+        </footer>
     </div>
 
 </body>
