--- a/contact.html
+++ b/contact.html
@@ -6,26 +6,37 @@
     <title>Contact</title>
 
     <!-- Link to CSS here-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
 </head>
 
 <body>
-    
-    <!-- Top Nav Bar HTML -->
-    <div class="topnav">
-        <ul>
-        <li style="float:left"><h1>Sarah Beecroft</h1></li>
-        <li style="float:right"><a href="contact.html">Contact</a></li>
-        <li style="float:right"><a href="portfolio.html">Portfolio</a></li>
-        <li style="float:right"><a href="index.html">About</a></li>
-        </ul>
-    </div>
+
+    <!-- Header includes h1 and nav bar-->
+    <header>
+        <div class="clearfix">
+
+            <div class="name">
+                <h1>Sarah Beecroft</h1>
+            </div>
+
+            <div class="nav">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+    </header>
 
     <!-- Contact Form HTML -->
     <div class="contactform">
-    <h2>Contact Me</h2>
-    <hr style="border: 1.5px solid #cccccc"/>
+        <h2>Contact Me</h2>
+        <hr style="border: 1.5px solid #cccccc" />
         <form action="add link later">
 
             <label for="name">Name</label>
@@ -41,14 +52,14 @@
 
         </form>
     </div>
-    
+
 
 
     <!-- Footer HTML -->
     <div class="footer">
         <footer>
-            <p id ="copyright">Copyright ©</p>
-        </footer>    
+            <p id="copyright">Copyright ©</p>
+        </footer>
     </div>
 
 </body>
