--- a/portfolio.html
+++ b/portfolio.html
@@ -37,10 +37,48 @@
     <div class="portfolio">
         <h2>Portfolio</h2>
         <hr style="border: 1.5px solid #cccccc" />
-        <p>
-            Fill in later.
-        </p><br>
+
     </div>
+
+    <!-- Portfolio Gallery Grid -->
+    <div class="row">
+        <div class="column">
+            <div class="content">
+                <img src="mountains.jpg" alt="Mountains" style="width:100%">
+                <h3>My Work</h3>
+                <p>Lorem ipsum..</p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <img src="lights.jpg" alt="Lights" style="width:100%">
+                <h3>My Work</h3>
+                <p>Lorem ipsum..</p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <img src="nature.jpg" alt="Nature" style="width:100%">
+                <h3>My Work</h3>
+                <p>Lorem ipsum..</p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <img src="mountains.jpg" alt="Mountains" style="width:100%">
+                <h3>My Work</h3>
+                <p>Lorem ipsum..</p>
+            </div>
+        </div>
+        <div class="column">
+            <div class="content">
+                <img src="mountains.jpg" alt="Mountains" style="width:100%">
+                <h3>My Work</h3>
+                <p>Lorem ipsum..</p>
+            </div>
+        </div>
+    </div>
+
 
 
     <!-- Footer HTML -->
