Adjusted portfolio formatting and added text over image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="about">
         <h2>About Me</h2>
         <hr style="border: 1.5px solid #cccccc" />
-        <img src="assets/images/ProfileImage.jpg" alt="Photo of Sarah Beecroft" />
+        <img id="profilephoto" src="assets/images/ProfileImage.jpg" alt="Photo of Sarah Beecroft" />
         <p class="bio">
 
 
