--- a/portfolio.html
+++ b/portfolio.html
@@ -38,47 +38,41 @@
         <h2>Portfolio</h2>
         <hr style="border: 1.5px solid #cccccc" />
 
-    </div>
-
     <!-- Portfolio Gallery Grid -->
-    <div class="row">
-        <div class="column">
-            <div class="content">
-                <img src="mountains.jpg" alt="Mountains" style="width:100%">
-                <h3>My Work</h3>
-                <p>Lorem ipsum..</p>
+    <!-- First image -->
+        <div class="row">
+            <div class="column">
+                <div class="image">
+                    <img src="assets/images/hangman.jpg" alt="Man holding tablet">
+                    <div class="bottom-center">Hangman</div>
+                </div> 
             </div>
-        </div>
+        
+    <!-- Second image -->
         <div class="column">
-            <div class="content">
-                <img src="lights.jpg" alt="Lights" style="width:100%">
-                <h3>My Work</h3>
-                <p>Lorem ipsum..</p>
-            </div>
-        </div>
-        <div class="column">
-            <div class="content">
-                <img src="nature.jpg" alt="Nature" style="width:100%">
-                <h3>My Work</h3>
-                <p>Lorem ipsum..</p>
-            </div>
-        </div>
-        <div class="column">
-            <div class="content">
-                <img src="mountains.jpg" alt="Mountains" style="width:100%">
-                <h3>My Work</h3>
-                <p>Lorem ipsum..</p>
-            </div>
-        </div>
-        <div class="column">
-            <div class="content">
-                <img src="mountains.jpg" alt="Mountains" style="width:100%">
-                <h3>My Work</h3>
-                <p>Lorem ipsum..</p>
-            </div>
+            <img src="assets/images/rpggame.jpg" alt="Technology">
         </div>
     </div>
 
+    <!-- Third image -->
+        <div class="row">
+            <div class="column">
+                <img src="assets/images/triviagame.jpg" alt="Earbuds">
+            </div>
+              
+    <!-- Fourth image -->
+        <div class="column">
+            <img src="assets/images/rutgersinfowidget.jpg" alt="Phone and earbuds">
+        </div>
+    </div> 
+
+    <!-- Fifth image -->
+        <div class="row">
+            <div class="column">
+                <img src="assets/images/rockpaperscissors.jpg" alt="LED TV">
+            </div>
+        </div>
+    </div>
 
 
     <!-- Footer HTML -->
@@ -86,6 +80,7 @@
         <footer>
             <p id="copyright">Copyright ©</p>
         </footer>
+    </div>
     </div>
 
 </body>
