Updated formatting on portfolio and added rest of text blocks to images

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,26 +50,38 @@
         
     <!-- Second image -->
         <div class="column">
-            <img src="assets/images/rpggame.jpg" alt="Technology">
+            <div class="image">
+                <img src="assets/images/rpggame.jpg" alt="Technology">
+                <div class="bottom-center">RPG Game</div>
+            </div>    
         </div>
     </div>
 
     <!-- Third image -->
         <div class="row">
             <div class="column">
+                    <div class="image">
                 <img src="assets/images/triviagame.jpg" alt="Earbuds">
+                <div class="bottom-center">Trivia Game</div>
             </div>
+        </div>
               
     <!-- Fourth image -->
         <div class="column">
-            <img src="assets/images/rutgersinfowidget.jpg" alt="Phone and earbuds">
+            <div class="image">
+                <img src="assets/images/rutgersinfowidget.jpg" alt="Phone and earbuds">
+                <div class="bottom-center">Rutgers Info Widget</div>  
+            </div>  
         </div>
     </div> 
 
     <!-- Fifth image -->
         <div class="row">
             <div class="column">
-                <img src="assets/images/rockpaperscissors.jpg" alt="LED TV">
+                <div class="image">
+                    <img src="assets/images/rockpaperscissors.jpg" alt="LED TV">
+                    <div class="bottom-center">Rock Paper Scissors</div>
+                </div>        
             </div>
         </div>
     </div>
