Moved h1 down, styled footer and made it sticky

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     <!-- Contact Form HTML -->
     <div class="contactform">
         <h2>Contact Me</h2>
-        <hr style="border: 1.5px solid #cccccc" />
+        <hr width=95% style="border: 1.5px solid #dddddd"/>
         <form action="add link later">
 
             <label for="name">Name</label>
