--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- About Me HTML -->
     <div class="about">
         <h2>About Me</h2>
-        <hr style="border: 1.5px solid #cccccc" />
+        <hr width="95%" style="border: 1.5px solid #dddddd" />
         <img id="profilephoto" src="assets/images/ProfileImage.jpg" alt="Photo of Sarah Beecroft" />
         <p class="bio">
 
