--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
     <!-- Portfolio HTML -->
     <div class="portfolio">
         <h2>Portfolio</h2>
-        <hr style="border: 1.5px solid #cccccc" />
+        <hr width="95%" style="border: 1.5px solid #dddddd" />
 
     <!-- Portfolio Gallery Grid -->
     <!-- First image -->
