Removed scroll bar from header, moved h2 down, updated text box width on contact form

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,8 @@
     <div class="contactform">
         <h2>Contact Me</h2>
         <hr width=95% style="border: 1.5px solid #dddddd"/>
+        <br>
+        <div class="container">
         <form action="add link later">
 
             <label for="name">Name</label>
@@ -52,8 +54,7 @@
 
         </form>
     </div>
-
-
+    </div>
 
     <!-- Footer HTML -->
     <div class="footer">
