Extended background shadow on footer and made white, added padding to h1, and added notes to CSS

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
             <br>
             When not at work, I enjoy kicking back with a video game (action-adventure RPGs are my thing), but also
             love
-            exploring or checking out new breweries/restaurants.
+            exploring or checking out new breweries and restaurants.
 
         </p><br>
     </div>
 
     <!-- Footer HTML -->
-    <div class="footer">
-        <footer>
-            <p id="copyright">Copyright ©</p>
-        </footer>
-    </div>
-    </div>
+        <div class="footer">
+            <footer>
+                <p id="copyright">Copyright ©</p>
+            </footer>
+        </div>    
+    </div>  
 </body>
 
 </html>
