--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <label for="message">Message</label>
             <textarea id="message" name="message" placeholder="Write your message here" style="height:200px"></textarea>
 
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit">  <!-- Submit button -->
 
         </form>
     </div>
