--- a/contact.html
+++ b/contact.html
@@ -36,15 +36,15 @@
     <!-- Contact Form HTML -->
     <div class="contactform">
         <h2>Contact Me</h2>
-        <hr width=95% style="border: 1.5px solid #dddddd"/>
+        <hr>
         <br>
         <div class="container">
-        <form action="add link later">
+        <form action="none">
 
             <label for="name">Name</label>
             <input type="text" id="name" name="full name" placeholder="John Smith">
 
-            <label for="lname">Email</label>
+            <label for="email">Email</label>
             <input type="text" id="email" name="email" placeholder="example@gmail.com">
 
             <label for="message">Message</label>
